[gd_scene load_steps=17 format=2]

[ext_resource path="res://components/root_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/gui/close_button_pink.png" type="Texture" id=2]
[ext_resource path="res://components/options_menu/OptionsMenu.gd" type="Script" id=3]
[ext_resource path="res://components/options_menu/settings_panel.tres" type="StyleBox" id=4]
[ext_resource path="res://components/options_menu/SettingsTabs.gd" type="Script" id=5]
[ext_resource path="res://assets/fonts/MenuFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/gui/add_button.png" type="Texture" id=7]
[ext_resource path="res://assets/fonts/small_font.tres" type="DynamicFont" id=8]
[ext_resource path="res://components/size_screen/SizeForm.gd" type="Script" id=9]
[ext_resource path="res://components/size_screen/Presets.gd" type="Script" id=10]
[ext_resource path="res://components/options_menu/Error.gd" type="Script" id=11]
[ext_resource path="res://components/FontSize.gd" type="Script" id=12]
[ext_resource path="res://components/options_menu/SettingsPanel.gd" type="Script" id=13]
[ext_resource path="res://components/options_menu/Setup.gd" type="Script" id=14]

[sub_resource type="GDScript" id=2]
resource_name = "FontName"
script/source = "extends Label

func _on_OptionsMenu_font_selected(path):
	text = path.get_file()
"

[sub_resource type="StyleBoxEmpty" id=1]

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.94902 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 83.0
margin_top = 61.0
margin_right = -84.0
margin_bottom = -56.0
mouse_filter = 2

[node name="Tabs" type="Tabs" parent="Panel/VBoxContainer"]
margin_right = 473.0
margin_bottom = 24.0
theme = ExtResource( 1 )
tab_align = 0
scrolling_enabled = false
script = ExtResource( 5 )

[node name="SettingsPanel" type="Panel" parent="Panel/VBoxContainer"]
margin_top = 28.0
margin_right = 473.0
margin_bottom = 363.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
custom_styles/panel = ExtResource( 4 )
script = ExtResource( 13 )

[node name="Setup" type="VBoxContainer" parent="Panel/VBoxContainer/SettingsPanel" groups=["tab_0"]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.5
margin_top = -91.5
margin_right = 140.5
margin_bottom = 91.5
mouse_filter = 2
script = ExtResource( 14 )

[node name="PositioningHeader" type="Label" parent="Panel/VBoxContainer/SettingsPanel/Setup"]
margin_right = 281.0
margin_bottom = 20.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.58, 0.58, 0.58, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Positioning"

[node name="PositioningOptions" type="VBoxContainer" parent="Panel/VBoxContainer/SettingsPanel/Setup"]
margin_top = 24.0
margin_right = 281.0
margin_bottom = 54.0
mouse_filter = 2

[node name="SetupMode" type="Button" parent="Panel/VBoxContainer/SettingsPanel/Setup/PositioningOptions"]
margin_right = 281.0
margin_bottom = 30.0
focus_mode = 0
custom_fonts/font = ExtResource( 6 )
text = "Enter Setup"

[node name="FilesHeader" type="Label" parent="Panel/VBoxContainer/SettingsPanel/Setup"]
margin_top = 58.0
margin_right = 281.0
margin_bottom = 78.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.58, 0.58, 0.58, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Files"

[node name="FilesOptions" type="VBoxContainer" parent="Panel/VBoxContainer/SettingsPanel/Setup"]
margin_top = 82.0
margin_right = 281.0
margin_bottom = 124.0
mouse_filter = 2

[node name="CustomFont" type="HBoxContainer" parent="Panel/VBoxContainer/SettingsPanel/Setup/FilesOptions"]
margin_right = 281.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/SettingsPanel/Setup/FilesOptions/CustomFont"]
margin_top = 11.0
margin_right = 84.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 6 )
text = "Custom Font"

[node name="Current" type="Label" parent="Panel/VBoxContainer/SettingsPanel/Setup/FilesOptions/CustomFont"]
margin_left = 88.0
margin_top = 12.0
margin_right = 118.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 8 )
text = "None"
script = SubResource( 2 )

[node name="AddButton" type="Button" parent="Panel/VBoxContainer/SettingsPanel/Setup/FilesOptions/CustomFont"]
margin_left = 122.0
margin_right = 164.0
margin_bottom = 42.0
focus_mode = 0
icon = ExtResource( 7 )
flat = true

[node name="PreferencesHeader" type="Label" parent="Panel/VBoxContainer/SettingsPanel/Setup"]
margin_top = 128.0
margin_right = 281.0
margin_bottom = 148.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.58, 0.58, 0.58, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Preferences"

[node name="PreferencesOptions" type="VBoxContainer" parent="Panel/VBoxContainer/SettingsPanel/Setup"]
margin_top = 152.0
margin_right = 281.0
margin_bottom = 196.0
mouse_filter = 2

[node name="AutoOpen" type="CheckBox" parent="Panel/VBoxContainer/SettingsPanel/Setup/PreferencesOptions"]
margin_right = 281.0
margin_bottom = 20.0
focus_mode = 0
custom_fonts/font = ExtResource( 6 )
pressed = true
text = "Open success dialog on save"

[node name="FontOutline" type="CheckBox" parent="Panel/VBoxContainer/SettingsPanel/Setup/PreferencesOptions"]
margin_top = 24.0
margin_right = 281.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 6 )
pressed = true
text = "Text Outline"

[node name="Graphics" type="VBoxContainer" parent="Panel/VBoxContainer/SettingsPanel" groups=["tab_1"]]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -115.5
margin_right = 110.0
margin_bottom = 115.5
custom_constants/separation = 45

[node name="FontSize" type="VBoxContainer" parent="Panel/VBoxContainer/SettingsPanel/Graphics"]
margin_right = 220.0
margin_bottom = 54.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/SettingsPanel/Graphics/FontSize"]
margin_right = 220.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 6 )
text = "Font Size"

[node name="FontSize" type="LineEdit" parent="Panel/VBoxContainer/SettingsPanel/Graphics/FontSize"]
margin_top = 24.0
margin_right = 220.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 6 )
placeholder_text = "16"
script = ExtResource( 12 )

[node name="ImageSize" type="VBoxContainer" parent="Panel/VBoxContainer/SettingsPanel/Graphics"]
margin_top = 99.0
margin_right = 220.0
margin_bottom = 153.0
script = ExtResource( 9 )

[node name="Label" type="Label" parent="Panel/VBoxContainer/SettingsPanel/Graphics/ImageSize"]
margin_right = 220.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 6 )
text = "Image Size"

[node name="Error" type="Label" parent="Panel/VBoxContainer/SettingsPanel/Graphics/ImageSize"]
visible = false
margin_top = 24.0
margin_right = 220.0
margin_bottom = 41.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
script = ExtResource( 11 )

[node name="Presets" type="OptionButton" parent="Panel/VBoxContainer/SettingsPanel/Graphics/ImageSize"]
margin_top = 24.0
margin_right = 220.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 6 )
text = "RPG Maker VXA (640x480)"
items = [ "RPG Maker VXA (640x480)", null, false, 0, null, "Trilogy (800x600)", null, false, 1, null, "Custom", null, false, 2, null ]
selected = 0
script = ExtResource( 10 )

[node name="Resolution" type="HBoxContainer" parent="Panel/VBoxContainer/SettingsPanel/Graphics/ImageSize/Presets"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -67.5
margin_top = 4.0
margin_right = 63.5
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_group_": true
}

[node name="Res_X" type="LineEdit" parent="Panel/VBoxContainer/SettingsPanel/Graphics/ImageSize/Presets/Resolution"]
margin_right = 58.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 6 )
text = "640"
align = 1
max_length = 4
context_menu_enabled = false
middle_mouse_paste_enabled = false

[node name="Label_X" type="Label" parent="Panel/VBoxContainer/SettingsPanel/Graphics/ImageSize/Presets/Resolution"]
margin_left = 62.0
margin_top = 8.0
margin_right = 69.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 6 )
text = "x"
align = 1
uppercase = true

[node name="Res_Y" type="LineEdit" parent="Panel/VBoxContainer/SettingsPanel/Graphics/ImageSize/Presets/Resolution"]
margin_left = 73.0
margin_right = 131.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 6 )
text = "480"
align = 1
max_length = 4
context_menu_enabled = false
middle_mouse_paste_enabled = false

[node name="Confirm" type="Button" parent="Panel/VBoxContainer/SettingsPanel/Graphics"]
margin_top = 198.0
margin_right = 220.0
margin_bottom = 228.0
focus_mode = 0
custom_fonts/font = ExtResource( 6 )
text = "Apply Changes"

[node name="Close" type="Button" parent="."]
margin_left = 6.0
margin_top = 9.0
margin_right = 50.0
margin_bottom = 47.0
custom_styles/focus = SubResource( 1 )
icon = ExtResource( 2 )
flat = true

[connection signal="font_outline" from="." to="Panel/VBoxContainer/SettingsPanel/Setup" method="_on_OptionsMenu_font_outline"]
[connection signal="font_selected" from="." to="Panel/VBoxContainer/SettingsPanel/Setup/FilesOptions/CustomFont/Current" method="_on_OptionsMenu_font_selected"]
[connection signal="main_font_size_changed" from="." to="Panel/VBoxContainer/SettingsPanel/Graphics/FontSize/FontSize" method="_on_main_font_size_changed"]
[connection signal="update_preference" from="." to="Panel/VBoxContainer/SettingsPanel/Setup" method="_on_OptionsMenu_update_preference"]
[connection signal="tab_changed" from="Panel/VBoxContainer/Tabs" to="Panel/VBoxContainer/SettingsPanel" method="_on_Tabs_tab_changed"]
[connection signal="button_up" from="Panel/VBoxContainer/SettingsPanel/Setup/PositioningOptions/SetupMode" to="." method="_on_SetupMode_button_up"]
[connection signal="button_up" from="Panel/VBoxContainer/SettingsPanel/Setup/FilesOptions/CustomFont/AddButton" to="." method="_on_AddButton_button_up"]
[connection signal="toggled" from="Panel/VBoxContainer/SettingsPanel/Setup/PreferencesOptions/AutoOpen" to="." method="_on_AutoOpen_toggled"]
[connection signal="toggled" from="Panel/VBoxContainer/SettingsPanel/Setup/PreferencesOptions/FontOutline" to="." method="_on_FontOutline_toggled"]
[connection signal="font_size_changed" from="Panel/VBoxContainer/SettingsPanel/Graphics/FontSize/FontSize" to="." method="_on_font_size_changed"]
[connection signal="text_entered" from="Panel/VBoxContainer/SettingsPanel/Graphics/FontSize/FontSize" to="Panel/VBoxContainer/SettingsPanel/Graphics/FontSize/FontSize" method="_on_FontSize_text_entered"]
[connection signal="set_size" from="Panel/VBoxContainer/SettingsPanel/Graphics/ImageSize" to="." method="_on_ImageSize_set_size"]
[connection signal="show_error" from="Panel/VBoxContainer/SettingsPanel/Graphics/ImageSize" to="Panel/VBoxContainer/SettingsPanel/Graphics/ImageSize/Error" method="_on_ImageSize_show_error"]
[connection signal="item_selected" from="Panel/VBoxContainer/SettingsPanel/Graphics/ImageSize/Presets" to="Panel/VBoxContainer/SettingsPanel/Graphics/ImageSize/Presets" method="_on_Presets_item_selected"]
[connection signal="text_changed" from="Panel/VBoxContainer/SettingsPanel/Graphics/ImageSize/Presets/Resolution/Res_X" to="Panel/VBoxContainer/SettingsPanel/Graphics/ImageSize/Presets" method="_on_Res_X_text_changed"]
[connection signal="text_changed" from="Panel/VBoxContainer/SettingsPanel/Graphics/ImageSize/Presets/Resolution/Res_Y" to="Panel/VBoxContainer/SettingsPanel/Graphics/ImageSize/Presets" method="_on_Res_Y_text_changed"]
[connection signal="button_up" from="Panel/VBoxContainer/SettingsPanel/Graphics/Confirm" to="Panel/VBoxContainer/SettingsPanel/Graphics/FontSize/FontSize" method="_on_Confirm_button_up"]
[connection signal="button_up" from="Panel/VBoxContainer/SettingsPanel/Graphics/Confirm" to="Panel/VBoxContainer/SettingsPanel/Graphics/ImageSize" method="_on_Confirm_button_up"]
[connection signal="button_up" from="Close" to="." method="_on_Close_button_up"]
